@startuml Base de Datos PLM - Normalizada
!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PRIMARY_KEY(x) <b>x</b>
!define FOREIGN_KEY(x) <i>x</i>

skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false
skinparam class {
    BackgroundColor<<T>> #FFE6E6
    BorderColor #CC0000
    ArrowColor #000000
}

TABLE(usuarios, "usuarios") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    email : VARCHAR(255) <<UNIQUE>>
    password : VARCHAR(255)
    nombre : VARCHAR(255)
    rol : ENUM('administrador', 'supervisor_qa', 'supervisor_calidad', 'analista_laboratorio')
    estado : ENUM('activo', 'inactivo')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(categorias, "categorias") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    nombre : VARCHAR(100) <<UNIQUE>>
    descripcion : TEXT
    tipo_producto : ENUM('producto_terminado', 'materia_prima', 'componente')
    estado : ENUM('activo', 'inactivo')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(productos, "productos") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    codigo : VARCHAR(100) <<UNIQUE>>
    nombre : VARCHAR(255)
    descripcion : TEXT
    FOREIGN_KEY(categoria_id) : INT <<FK>>
    unidad_medida : VARCHAR(50)
    estado : ENUM('activo', 'inactivo')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(materiales, "materiales") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    codigo : VARCHAR(100) <<UNIQUE>>
    nombre : VARCHAR(255)
    descripcion : TEXT
    FOREIGN_KEY(categoria_id) : INT <<FK>>
    unidad_medida : VARCHAR(50)
    estado : ENUM('activo', 'inactivo')
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(boms, "boms") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    FOREIGN_KEY(producto_id) : INT <<FK>>
    version : VARCHAR(20)
    estado : ENUM('borrador', 'aprobado', 'obsoleto')
    justificacion : TEXT
    FOREIGN_KEY(created_by) : INT <<FK>>
    FOREIGN_KEY(approved_by) : INT <<FK>>
    approved_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    --
    UNIQUE(producto_id, version)
}

TABLE(bom_items, "bom_items") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    FOREIGN_KEY(bom_id) : INT <<FK>>
    FOREIGN_KEY(material_id) : INT <<FK>>
    cantidad : DECIMAL(15,4)
    unidad : VARCHAR(50)
    porcentaje : DECIMAL(5,2)
    secuencia : INT
    created_at : TIMESTAMP
}

TABLE(ideas, "ideas") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    titulo : VARCHAR(255)
    descripcion : TEXT
    detalles_ia : LONGTEXT
    pruebas_requeridas : TEXT
    categoria : VARCHAR(100)
    prioridad : VARCHAR(20)
    objetivo : TEXT
    FOREIGN_KEY(producto_origen_id) : INT <<FK>>
    FOREIGN_KEY(asignado_a) : INT <<FK>>
    estado : ENUM('generada', 'en_revision', 'aprobada', 'en_prueba', 'prueba_aprobada', 'rechazada', 'en_produccion')
    FOREIGN_KEY(created_by) : INT <<FK>>
    FOREIGN_KEY(approved_by) : INT <<FK>>
    approved_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(pruebas, "pruebas") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    FOREIGN_KEY(idea_id) : INT <<FK>>
    codigo_muestra : VARCHAR(100)
    tipo_prueba : VARCHAR(100)
    descripcion : TEXT
    estado : ENUM('pendiente', 'en_proceso', 'completada', 'oos', 'rechazada')
    fecha_muestreo : TIMESTAMP
    fecha_inicio : TIMESTAMP
    fecha_fin : TIMESTAMP
    resultado : TEXT
    observaciones : TEXT
    equipos_utilizados : TEXT
    pruebas_requeridas : TEXT
    FOREIGN_KEY(analista_id) : INT <<FK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

TABLE(resultados_prueba, "resultados_prueba") {
    PRIMARY_KEY(id) : INT <<PK>>
    --
    FOREIGN_KEY(prueba_id) : INT <<FK>>
    parametro : VARCHAR(255)
    especificacion : VARCHAR(255)
    resultado : VARCHAR(255)
    unidad : VARCHAR(50)
    cumple_especificacion : BOOLEAN
    observaciones : TEXT
    created_at : TIMESTAMP
}

' Relaciones
categorias ||--o{ productos : "categoria_id"
categorias ||--o{ materiales : "categoria_id"
productos ||--o{ boms : "producto_id"
usuarios ||--o{ boms : "created_by"
usuarios ||--o{ boms : "approved_by"
boms ||--o{ bom_items : "bom_id"
materiales ||--o{ bom_items : "material_id"
productos ||--o{ ideas : "producto_origen_id"
usuarios ||--o{ ideas : "asignado_a"
usuarios ||--o{ ideas : "created_by"
usuarios ||--o{ ideas : "approved_by"
ideas ||--o{ pruebas : "idea_id"
usuarios ||--o{ pruebas : "analista_id"
pruebas ||--o{ resultados_prueba : "prueba_id"

note right of productos
  **Normalizado**: Eliminado campo
  redundante 'categoria' VARCHAR.
  Solo se usa 'categoria_id' FK.
end note

note right of materiales
  **Normalizado**: Eliminado campo
  redundante 'categoria' VARCHAR.
  Solo se usa 'categoria_id' FK.
end note

@enduml

